[package]
name = "tt"
version = "0.1.0"
authors = ["xvzftube <xvzftube@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabwriter = "1"
#serde = "1.0.125"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
pad = "0.1.6"
console = "0.14.1"
